--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.security.user.password=123456
 spring.profiles.include=mail,secret
 
 logging.file.name=log/server.log
+
+spring.config.import=optional:file:/config.properties
