--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,16 +1,14 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Docker Push
 
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.0.2
@@ -23,8 +21,13 @@ jobs:
           server-id: github
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
-      - name: Test
-        run: mvn test
+      - name: Build Image
+        run: mvn spring-boot:build-image
         env:
           MAVEN_USERNAME: jiangtj
           MAVEN_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+      - name: Push
+        run: |
+          docker login -u jiangtj -p ${{ secrets.MYPASS }}
+          docker push jiangtj/sba-sender:latest
+
