--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
                 <configuration>
                     <executable>true</executable>
                     <image>
-                        <name>jiangtj/sba-sender</name>
+                        <name>jiangtj/sba-server</name>
                         <env>
                             <BP_JVM_VERSION>17.*</BP_JVM_VERSION>
                         </env>
