--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.profiles.include=mail,secret
 
 logging.file.name=log/server.log
 
-spring.config.import=optional:file:/config.properties
+spring.config.location=optional:/config/
